--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -17,13 +17,13 @@
       <tbody>
         <% @invoices.each do |invoice| %>
           <tr>
-            <td><%= invoice.date %></td>
+            <td><%= invoice.date.strftime('%Y-%m-%d') %></td>
             <td><%= invoice.company %></td>
             <td><%= invoice.tax %></td>
             <td><%= invoice.salesperson %></td>
-            <td><%= link_to 'Show', invoice %></td>
-            <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
-            <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Show', invoice, :class=> "btn btn-mini" %></td>
+            <td><%= link_to 'Edit', edit_invoice_path(invoice), :class=> "btn btn-mini btn-success" %></td>
+            <td><%= link_to 'Destroy', invoice, method: :delete, :class=> "btn btn-mini btn-danger", data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
